--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
 body {
     background-color: aqua;
     margin: 0;
@@ -6,12 +16,14 @@ body {
 header {
     background-color: rgb(255, 47, 0);
     display: flex;
-    height: 100px;
+    height: auto;
     width: 98%;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
     font-family:Georgia, 'Times New Roman', Times, serif;  
+    border-bottom: 10px;
+    border-style: dashed;
 }
 
 .left-content {
@@ -30,6 +42,11 @@ header {
     border-radius: 15px 50px;
 }
 
+.header h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-left: 50px;
+ 
+}
 
 .nav-links{
         margin: 0;
@@ -46,4 +63,44 @@ header {
     display: inline-block;
     margin-left: 20px; 
     background-color: rgb(255, 47, 0);
+}
+
+.about-me {
+    background-color: darkslategray;
+    color: white;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    padding: 20px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+.about-me h1 {
+    /* display: block; */
+    text-align: right;
+    margin: 0px 5px;
+}
+
+.about-me p {
+    max-width: 80%;
+    margin: 0px 15px;
+}
+
+/* .about-me img{
+    max-width: 100%;
+    height: auto;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 5px;
+    margin: 0px 3px;
+} */
+
+Media query for smaller screens
+@media screen and (max-width: 600px) {
+    .about-me {
+        /* Adjust styles for smaller screens */
+        display: flex; /* For example, change the display property */
+        /* Add more styles as needed */
+    }
 }
