--- a/assets/style.css
+++ b/assets/style.css
@@ -9,13 +9,13 @@ html {
 }
 
 body {
-    background-color: aqua;
+    background-color:  white;
     margin: 0;
     font-family:Georgia, 'Times New Roman', Times, serif;  
 }
 
 header {
-    background-color: rgb(255, 47, 0);
+    background-color: rgb(84, 45, 80);
     display: flex;
     height: auto;
     width: 98%;
@@ -45,7 +45,12 @@ header {
 .header h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin-left: 50px;
- 
+    color: white; 
+}
+
+.header h2 {
+    color: pink;
+    font-stretch: ultra-expanded;
 }
 
 .nav-links{
@@ -62,7 +67,8 @@ header {
 .links li {
     display: inline-block;
     margin-left: 20px; 
-    background-color: rgb(255, 47, 0);
+    color: white;
+    background-color: rgb(84, 45, 80);
 }
 
 .about-me {
